--- a/templates/create_session.html
+++ b/templates/create_session.html
@@ -33,7 +33,7 @@
             margin-bottom: 5px;
             display: block;
         }
-        input, textarea {
+        input, textarea, select {
             width: 100%;
             border: 1px solid #ccc;
             border-radius: 5px;
@@ -41,7 +41,7 @@
             font-size: 16px;
             transition: border-color 0.3s;
         }
-        input:focus, textarea:focus {
+        input:focus, textarea:focus, select:focus {
             border-color: #4CAF50;
             outline: none;
         }
@@ -86,6 +86,11 @@
         <form method="post">
             {% csrf_token %}
             
+            <div class="form-field">
+                {{ form.student.label_tag }}<br>
+                {{ form.student }}  <!-- Add student field here -->
+            </div>
+
             <div class="form-field">
                 {{ form.title.label_tag }}<br>
                 {{ form.title }}
