--- a/templates/student_profile.html
+++ b/templates/student_profile.html
@@ -493,8 +493,8 @@
 <div class="profile-container desktop-profile">
     <div class="profile-sidebar">
         <div class="card profile-header">
-            {% if student_form and student_form.profile_picture %}
-                <img src="{{ student_form.profile_picture.url }}" alt="{{ student.name }}" class="profile-img">
+            {% if student1.profile_picture %}
+                <img src="{{ student1.profile_picture.url }}" alt="{{ student.name }}" class="profile-img">
             {% else %}
                 <img src="https://via.placeholder.com/150" alt="{{ student.name }}" class="profile-img">
             {% endif %}
@@ -629,8 +629,8 @@
 <!-- Mobile layout -->
 <div class="mobile-profile" style="display: none;">
     <div class="card profile-header">
-        {% if student_form and student_form.profile_picture %}
-            <img src="{{ student_form.profile_picture.url }}" alt="{{ student.name }}" class="profile-img">
+        {% if student1.profile_picture %}
+            <img src="{{ student1.profile_picture.url }}" alt="{{ student.name }}" class="profile-img">
         {% else %}
             <img src="https://via.placeholder.com/150" alt="{{ student.name }}" class="profile-img">
         {% endif %}
