--- a/templates/student_profile.html
+++ b/templates/student_profile.html
@@ -761,32 +761,32 @@
             
             <!-- Hidden Mentor Username -->
             <input type="hidden" name="mentor" value="{{ user.username }}" required>
-
+        
             <!-- Hidden Student ID -->
             <input type="hidden" name="student" value="{{ student.id }}" required>
-
+        
             <div class="form-group">
                 <label>Student:</label>
                 <p class="form-control-static">{{ student.name }}</p>
             </div>
-
+        
             <div class="form-group">
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" required>
             </div>
-
+        
             <div class="form-group">
                 <label for="description">Description:</label>
                 <textarea id="description" name="description" required></textarea>
             </div>
-
+        
             <div class="form-group">
                 <label for="additional-info">Additional Info:</label>
-                <textarea id="additional-info" name="additional-info"></textarea>
+                <textarea id="additional-info" name="additional_info" placeholder="Enter key: value pairs, one per line..."></textarea>
             </div>
-
+        
             <button type="submit" class="btn">Submit</button>
-        </form>
+        </form>        
     </div>
 </div>
 
