--- a/templates/mentor_admin/dashboard.html
+++ b/templates/mentor_admin/dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Mentor Dashboard{% endblock %}
+{% block title %}Admin Dashboard{% endblock %}
 
 {% block content %}
 <style>
